--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -51,8 +51,7 @@
 				</ul>
 				<!-- Submenu 1 -->
 				<ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="학력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#어린이집x">어린이집</a></li>
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#초등학교x">초등학교</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="초등학교.html">초등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">중학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">고등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">대학교</a></li>
@@ -137,17 +136,18 @@
 				</ul>
 			</div>
 		</nav>
+		
 		<div class="content">
 			<p class="info">Please choose a category</p>
 		</div>
-		<div class="content">
-			<p id="어린이집x"> 대전 성x어린이집</p>
-		</div>
-		<div class="content">
-			<p id="초등학교x"> 대전 성x초등학교</p>
+		
+		<div class="main">
+     		 <ul>
+     			<li><p>대전 성X초등학교:<br/>
+    			  입학 20xX년*월~20XX년 1월 졸업</p></li>
+       		</ul>
 		</div>
 			<!-- Ajax loaded content here -->
-	</div>
 
 	<!-- /view -->
 	<script src="classie.js"></script>
