--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -51,7 +51,7 @@
 				</ul>
 				<!-- Submenu 1 -->
 				<ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="학력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="초등학교.html">초등학교</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">초등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">중학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">고등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">대학교</a></li>
@@ -139,13 +139,6 @@
 		
 		<div class="content">
 			<p class="info">Please choose a category</p>
-		</div>
-		
-		<div class="main">
-     		 <ul>
-     			<li><p>대전 성X초등학교:<br/>
-    			  입학 20xX년*월~20XX년 1월 졸업</p></li>
-       		</ul>
 		</div>
 			<!-- Ajax loaded content here -->
 
