--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <li><a href="https://xowlty.github.io/week11/memb3.html" target="_blank">memb3</a></li>
     <li><a href="https://xowlty.github.io/week11/memb4.html" target="_blank">memb4</a></li>
     <li><a href="https://xowlty.github.io/week11/memb5.html" target="_blank">memb5</a></li>
+    <li><a href="https://xowlty.github.io/week11/memb6.html" target="_blank">memb6</a></li>
    </ol>
   </li>
  </ul><hr/>
