--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -51,10 +51,10 @@
 				</ul>
 				<!-- Submenu 1 -->
 				<ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="학력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">초등학교</a></li>
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">중학교</a></li>
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">고등학교</a></li>
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">대학교</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="lje.html">초등학교</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="lje1.html">중학교</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="lje2.html">고등학교</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="lje3.html">대학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-1-1" aria-owns="submenu-1-1" href="#">-</a></li>
 				</ul>
 				<!-- Submenu 1-1 -->
@@ -140,6 +140,7 @@
 		<div class="content">
 			<p class="info">Please choose a category</p>
 		</div>
+		
 			<!-- Ajax loaded content here -->
 
 	<!-- /view -->
