--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
     <li><a href="https://xowlty.github.io/week11/memb4.html" target="_blank">memb4</a></li>
     <li><a href="https://xowlty.github.io/week11/memb5.html" target="_blank">memb5</a></li>
     <li><a href="https://xowlty.github.io/week11/memb6.html" target="_blank">memb6</a></li>
+    <li><a href="https://xowlty.github.io/week11/rwd0.html" target="_blank">rwd0</a></li>
+    <li><a href="https://xowlty.github.io/week11/rwd1.html" target="_blank">rwd1</a></li>
+    <li><a href="https://xowlty.github.io/week11/rwd2.html" target="_blank">rwd2</a></li>
+    <li><a href="https://xowlty.github.io/week11/rwd4.html" target="_blank">rwd4</a></li>
    </ol>
   </li>
  </ul><hr/>
