--- a/week12/sampleAll.html
+++ b/week12/sampleAll.html
@@ -5,7 +5,7 @@
  body{font-family:Verdana, sans-serif; font-size:0.8em;}
  header, nav, section, article, footer {border:1px solid gray; margin:5px; padding:8px;}
  section#displayArea{height:210px;}
- nav ul {margin:0; padding:0;}
+ nav ul {margin:0 padding:0;}
  nav ul li{display:inline; margin:5px;}
  a {text-decoration:none; }
  #id_form{width:100px; height:14px; color:red; }
@@ -13,7 +13,7 @@
 <script type="text/javascript">
  function fnTest(){
  document.write("자바스크립트환영!")
- alert("자바 스크립트 환영!!");
+ alert("자바 스크립트 환영!!");}
 </script>
 <title>자바스크립트실습</title></head>
 <body>
