--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
     <li><a href="https://xowlty.github.io/week12/rwd1.html" target="_blank">rwd1</a></li>
     <li><a href="https://xowlty.github.io/week12/rwd2.html" target="_blank">rwd2</a></li>
     <li><a href="https://xowlty.github.io/week12/rwd4.html" target="_blank">rwd4</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleAll.html" target="_blank">sampleAll</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleAllMod.html" target="_blank">sampleAllMod</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleMethod0.html" target="_blank">sampleMethod0</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleMethod1.html" target="_blank">sampleMethod1</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleMethod2.html" target="_blank">sampleMethod2</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleMethod3.html" target="_blank">sampleMethod3</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleMethod4.html" target="_blank">sampleMethod4</a></li>
+    <li><a href="https://xowlty.github.io/week12/sampleMethod5.html" target="_blank">sampleMethod5</a></li>
+    <li><a href="https://xowlty.github.io/week12/docWrite1.html" target="_blank">docWrite1</a></li>
+    <li><a href="https://xowlty.github.io/week12/docWrite2.html" target="_blank">docWrite2</a></li>
+    <li><a href="https://xowlty.github.io/week12/docWrite3.html" target="_blank">docWrite3</a></li>
    </ol>
   </li>
  </ul><hr/>
