--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -24,7 +24,7 @@
 <nav class="col-3 col-m-3 menu">
 <ul><li>학력</li><li>경력</li><li>수업 수강 내역</li><li>과목별 프로젝트 설명</li><li>공모전</li><li>동아리</li><li>봉사활동</li><li>ect.</li></ul></nav>
 <section class="col-6 col-m-9">
-<h3>대전광역시</h3><p>우리나라중아에위치한150만....</p>
+<h3>SPEC</h3><p>메뉴클릭!</p>
 <picture>
 <source media="(min-width:768px)"srcset="lob_big.png">
 <source media="(min-width:600px)"srcset="lob_nomal.png">
