--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -28,7 +28,7 @@
 <picture>
 <source media="(min-width:768px)"srcset="lob_big.png">
 <source media="(min-width:600px)"srcset="lob_nomal.png">
-<img src="lob_small.png" alt="lobster" style="width:auto;">
+<img src="moon-1859616_1920.png" alt="moon" style="width:auto;">
 </picture>
 </section>
 <aside class="col-3 col-m-12 banner">
