--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -22,7 +22,7 @@
 <div class="row"></div>
 <div id="main">
 <nav class="col-3 col-m-3 menu">
-<ul><li>학력</li><li>경력</li><li>수업 수강 내역</li><li>과목별 프로젝트 설명</li><li>공모전</li><li>동아리</li><li>봉사활동</li><li>ect.</li></ul></nav>
+<ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lj5e.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">ect.</a></li></ul></nav>
 <section class="col-6 col-m-9">
 <h3>SPEC</h3><p>메뉴클릭!</p>
 <picture>
