--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
     <li><a href="https://xowlty.github.io/week12/docWrite1.html" target="_blank">docWrite1</a></li>
     <li><a href="https://xowlty.github.io/week12/docWrite2.html" target="_blank">docWrite2</a></li>
     <li><a href="https://xowlty.github.io/week12/docWrite3.html" target="_blank">docWrite3</a></li>
+    <li><a href="https://xowlty.github.io/week12/varTest.html" target="_blank">varTest</a></li>
+    <li><a href="https://xowlty.github.io/week12/operatorTest.html" target="_blank">operatorTest</a></li>
+    <li><a href="https://xowlty.github.io/week12/condText.html" target="_blank">condText</a></li>
+    <li><a href="https://xowlty.github.io/week12/ifTest.html" target="_blank">ifTest</a></li>
+    <li><a href="https://xowlty.github.io/week12/ifTest2.html" target="_blank">ifTest2</a></li>
+    <li><a href="https://xowlty.github.io/week12/switchTest.html" target="_blank">switchTest</a></li>
    </ol>
   </li>
  </ul><hr/>
