--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -26,8 +26,8 @@
 <section class="col-6 col-m-9">
 <h3>SPEC</h3><p>메뉴클릭!</p>
 <picture>
-<source media="(min-width:768px)"srcset="lob_big.png">
-<source media="(min-width:600px)"srcset="lob_nomal.png">
+<source media="(min-width:768px)"srcset="moon-1859616_1920.png">
+<source media="(min-width:600px)"srcset="moon-1859616_1920.png">
 <img src="moon-1859616_1920.png" alt="moon" style="width:auto;">
 </picture>
 </section>
