--- a/portfolio/lje2.html
+++ b/portfolio/lje2.html
@@ -53,7 +53,7 @@
 <nav class="col-3 col-m-3 menu">
 <ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lj5e.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">ect.</a></li></ul></nav>
 <section class="col-6 col-m-9">
- <h4>2학년1학기 시간표</h4><hr/>
+ <h4>2학년1학기 시간표</h4><hr/><br/>
  <table>
  <tr>
   <th></th><th>월</th><th>화</th><th>수</th><th>목</th><th>금</th>
