--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -10,7 +10,7 @@
 .menu ul, .banner ul{list-style-type:none;}
 .menu li{background-color:#B2CCFF; color:black; padding:10px; margin-bottom:10px; box-shadow:0.1px 3px gray; }
 .menu li:hover{background-color:#B5B2FF;}
-.banner li {border:2px solid #B2CCFF; padding:10px; margin-bottom:10px; box-shadow:0.1px 3px gray;}
+.banner li {border:2px solid white; padding:10px; margin-bottom:10px; box-shadow:0.1px 3px gray;}
 .banner li img{width:30%; vertical-align:middle;}
 /* for mobile*/
 [class*="col-"]{width:100%;}
@@ -31,7 +31,7 @@
 </picture>
 </section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="2362948-200.png">task</li></ul></aside>
+<ul><li><img src="2362948-200.png"></li></ul></aside>
 </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
