--- a/portfolio/lje.html
+++ b/portfolio/lje.html
@@ -27,6 +27,7 @@
  <h4>학력</h4><hr/><ul><li><p>성X초등학교</p></li><li><p>대X여자중학교</p></li><li><p>대X여자고등학교</p></li><li><p>대X대학교</p></li></ul>
 </section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="2362948-200.png"></li></ul></aside></div><div class="row"></div>
+<ul><li><img src="2362948-200.png"></li>><li><img src="2534469-200.png"></li><li><img src="1900647-200.png"></li></ul></aside>
+ </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
