--- a/portfolio/lje1.html
+++ b/portfolio/lje1.html
@@ -27,7 +27,7 @@
 <h4>아르바이트 경력</h4><hr/> <ul><li><p>옷가게</p></li><li><p>카페</p></li><li><p>모델하우스 안내원</p></li></ul>
 </section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="taegeuk.png">한국</li><li><img src="taegeuk.png">Korea</li></ul></aside>
+<ul><li><img src="2362948-200.png"></li><li><img src="2534469-200.png"></li><li><img src="2200551-200.png"></li></ul></aside>
 </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
