--- a/portfolio/lje2.html
+++ b/portfolio/lje2.html
@@ -87,7 +87,7 @@
  </tr>
  </table></section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="taegeuk.png">한국</li><li><img src="taegeuk.png">Korea</li></ul></aside>
+<ul><li><img src="2362948-200.png"></li><li><img src="2534469-200.png"></li><li><img src="2200551-200.png"></li></ul></aside>
 </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
