--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -31,7 +31,7 @@
 </picture>
 </section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="2362948-200.png"></li></ul></aside>
+<ul><li><img src="2362948-200.png"></li><li><img src="2534469-200.png"></li><li><img src="2200551-200.png"></li></ul></aside>
 </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
