--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -18,7 +18,7 @@
 @media only screen and (min-width: 768px){.col-3{width:25%;} .col-6{width:50%;}}
 </style>
 <title>RWD실습</title></head>
-<body><header class="header"><h2>20XX 이정은 포트폴리오</h2></header>
+  <body><header class="header"><a href="portfolio.html"><h2>20XX 이정은 포트폴리오</h2></a></header>
 <div class="row"></div>
 <div id="main">
 <nav class="col-3 col-m-3 menu">
