--- a/portfolio/lje5.html
+++ b/portfolio/lje5.html
@@ -26,7 +26,7 @@
  <h4>사이버정보단</h4><hr/><p>과에 중요한 행사가 있을 때 사진으로 기록을 남기는 일을 합니다</p>
 </section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="2362948-200.png"><a href="http://club.cyworld.com/ClubV1/Home.cy/51854165">대전대학교 컴퓨터공학과 싸이클럽</a></li><li><img src="2534469-200.png"></li><li><img src="2200551-200.png"></li></ul></aside>
+<ul><li><a href="http://club.cyworld.com/ClubV1/Home.cy/51854165"><img src="캡쳐.png"></a></li></ul></aside>
  </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
