--- a/portfolio/lje5.html
+++ b/portfolio/lje5.html
@@ -26,7 +26,7 @@
  <h4>사이버정보단</h4><hr/><p>과에 중요한 행사가 있을 때 사진으로 기록을 남기는 일을 합니다</p>
 </section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="캡쳐.png"><a href="http://club.cyworld.com/ClubV1/Home.cy/51854165"><br/>동아리활동 보러가기</a></li></ul></aside>
+<ul><li><img src="캡쳐.PNG"><a href="http://club.cyworld.com/ClubV1/Home.cy/51854165"><br/>동아리활동 보러가기</a></li></ul></aside>
  </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
