--- a/portfolio/lje1.html
+++ b/portfolio/lje1.html
@@ -21,7 +21,7 @@
   <body><header class="header"><a href="portfolio.html"><h2>20XX 이정은 포트폴리오</h2></a></header><div class="row"></div>
 <div id="main">
 <nav class="col-3 col-m-3 menu">
-<ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lj5e.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">ect.</a></li></ul></nav>
+<ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lje5.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">ect.</a></li></ul></nav>
 <section class="col-6 col-m-9">
 <h4>아르바이트 경력</h4><hr/> <ul><li>옷가게</li><li>카페</li><li>모델하우스 안내원</li></ul>
 </section>
