--- a/portfolio/lje4.html
+++ b/portfolio/lje4.html
@@ -3,6 +3,7 @@
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
 <link rel="stylesheet" href="rwd4.css"/>
 <style>
+ol.e{list-style-type:decimal-leading-zero;}
 *{ box-sizing:border-box; padding:0; margin:0; }
 .row::after { content:""; clear:both; display: table; }
 [class*="col-"]{ float:left; padding:10px;}
@@ -23,10 +24,11 @@
 <nav class="col-3 col-m-3 menu">
 <ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lje5.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">ect.</a></li></ul></nav>
 <section class="col-6 col-m-9">
- <h4>공모전 알림</h4><hr/><p><img src="KakaoTalk_20190528_002929543.png">창업경진대회<img src="KakaoTalk_20190528_002931284.png">스토리공모전<img src="KakaoTalk_20190528_002930599.png">논문공모전</p>
+ <h4>공모전 알림</h4><hr/><br/><p><img src="KakaoTalk_20190528_002929543.png"><img src="KakaoTalk_20190528_002931284.png"><img src="KakaoTalk_20190528_002930599.png"></p>
 </section>
-<aside class="col-3 col-m-12 banner">
-<ul><li><img src="캡.PNG"><a href="http://club.cyworld.com/ClubV1/Home.cy/51854165"><br/>동아리활동 보러가기</a></li></ul></aside>
+<aside class="col-3 col-m-12">
+<br/>
+<ol class="e"><li>창업경진대회</li><li>스토리공모전</li><li>논문공모전</li></ol></aside>
  </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
