--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -17,7 +17,7 @@
 @media only screen and (min-width: 600px){ .col-m-3{width:25%;} .col-m-9{width:75%;} .col-m-12{width:100%;} }
 @media only screen and (min-width: 768px){.col-3{width:25%;} .col-6{width:50%;}}
 </style>
-<title>RWD실습</title></head>
+<title>20XX 이정은 포트폴리오</title></head>
   <body><header class="header"><a href="portfolio.html"><h2>20XX 이정은 포트폴리오</h2></a></header>
 <div class="row"></div>
 <div id="main">
