--- a/portfolio/lje2.html
+++ b/portfolio/lje2.html
@@ -46,7 +46,7 @@
 <style>
 .subject8{background-color:#ff69b4;}
 </style>
-<title>RWD실습</title></head>
+<title>20XX 이정은 포트폴리오</title></head>
   <body><header class="header"><a href="portfolio.html"><h2>20XX 이정은 포트폴리오</h2></a></header><div class="row"></div>
 <div id="main">
 <nav class="col-3 col-m-3 menu">
