--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
     <li><a href="https://xowlty.github.io/week12/switchTest.html" target="_blank">switchTest</a></li>
    </ol>
   </li>
+  <li id="week13">13주차
+   <ol>
+    <li><a href="https://xowlty.github.io/week13/forTest.html" target="_blank">forTest</a></li>
+   </ol>
+  </li>
  </ul><hr/>
 </body>
 </html>
