--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
   <li id="week13">13주차
    <ol>
     <li><a href="https://xowlty.github.io/week13/forTest.html" target="_blank">forTest</a></li>
+    <li><a href="https://xowlty.github.io/week13/whileTest.html" target="_blank">whileTest</a></li>
    </ol>
   </li>
  </ul><hr/>
