--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
    <ol>
     <li><a href="https://xowlty.github.io/week13/forTest.html" target="_blank">forTest</a></li>
     <li><a href="https://xowlty.github.io/week13/whileTest.html" target="_blank">whileTest</a></li>
+    <li><a href="https://xowlty.github.io/week13/funcTest.html" target="_blank">funcTest</a></li>
+    <li><a href="https://xowlty.github.io/week13/funcArgTest.html" target="_blank">funcArgTest</a></li>
    </ol>
   </li>
  </ul><hr/>
