--- a/week13/getElementsByName.html
+++ b/week13/getElementsByName.html
@@ -1,13 +1,13 @@
-<!doctype html> <!-- getElementByName.html -->
+<!doctype html> <!-- getElementsByName.html -->
 <html><head><meta charset="uft-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <link rel="stylesheet" href="sample.css"/><script src="sample.js"></script>
 <script>
  function fnGetElementsByName(){
-  var accessTag=document.getElementByName("input_name1")[0];
+  var accessTag=document.getElementsByName("input_name1")[0];
   console.log(accessTag.tagName);
-  accessTag.setAttribute("value","getElementByName실행!");
+  accessTag.setAttribute("value","getElementsByName실행!");
 }
 </script><title>웹 프로그래밍 실습</title></head>
 <body>
