Update and rename getElementByTagName.html to getElementsByTagName.html

--- a/week13/getElementsByTagName.html
+++ b/week13/getElementsByTagName.html
@@ -1,13 +1,13 @@
-<!doctype html> <!-- getElementByTagName.html -->
+<!doctype html> <!-- getElementsByTagName.html -->
 <html><head><meta charset="uft-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <link rel="stylesheet" href="sample.css"/><script src="sample.js"></script>
 <script>
  function fnGetElementsByTagName(){
-  var accessTag=document.getElementByTagName("input_name1")[0];
+  var accessTag=document.getElementsByTagName("input_name1")[0];
   console.log(accessTag.tagName);
-  accessTag.setAttribute("value","getElementByTagName실행!");
+  accessTag.setAttribute("value","getElementsByTagName실행!");
 }
 </script><title>웹 프로그래밍 실습</title></head>
 <body>
