--- a/week13/getElementsByTagName.html
+++ b/week13/getElementsByTagName.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="sample.css"/><script src="sample.js"></script>
 <script>
  function fnGetElementsByTagName(){
-  var accessTag=document.getElementsByTagName("input_name1")[0];
+  var accessTag=document.getElementsByTagName("input")[0];
   console.log(accessTag.tagName);
   accessTag.setAttribute("value","getElementsByTagName실행!");
 }
