--- a/index.html
+++ b/index.html
@@ -197,6 +197,17 @@
     <li><a href="https://xowlty.github.io/week13/whileTest.html" target="_blank">whileTest</a></li>
     <li><a href="https://xowlty.github.io/week13/funcTest.html" target="_blank">funcTest</a></li>
     <li><a href="https://xowlty.github.io/week13/funcArgTest.html" target="_blank">funcArgTest</a></li>
+    <li><a href="https://xowlty.github.io/week13/sampleAllMod.html" target="_blank">sampleAllMod</a></li>
+    <li><a href="https://xowlty.github.io/week13/htmlDom.html" target="_blank">htmlDom</a></li>
+    <li><a href="https://xowlty.github.io/week13/getElementById.html" target="_blank">getElementById</a></li>
+    <li><a href="https://xowlty.github.io/week13/getElementsByName.html" target="_blank">getElementsByName</a></li>
+    <li><a href="https://xowlty.github.io/week13/getElementsByTagName.html" target="_blank">getElementsByTagName</a></li>
+    <li><a href="https://xowlty.github.io/week13/getElementsByDom.html" target="_blank">getElementsByDom</a></li>
+    <li><a href="https://xowlty.github.io/week13/getChildNodes.html" target="_blank">getChildNodes</a></li>
+    <li><a href="https://xowlty.github.io/week13/getSetModeValue.html" target="_blank">getSetModeValue</a></li>
+    <li><a href="https://xowlty.github.io/week13/getSetInnerHTML.html" target="_blank">getSetInnerHTML</a></li>
+    <li><a href="https://xowlty.github.io/week13/getSetAttribute.html" target="_blank">getSetAttribute</a></li>
+    <li><a href="https://xowlty.github.io/week13/onClickClassicHandler.html" target="_blank">onClickClassicHandler</a></li>
    </ol>
   </li>
  </ul><hr/>
