--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
     <li><a href="https://xowlty.github.io/week13/getSetInnerHTML.html" target="_blank">getSetInnerHTML</a></li>
     <li><a href="https://xowlty.github.io/week13/getSetAttribute.html" target="_blank">getSetAttribute</a></li>
     <li><a href="https://xowlty.github.io/week13/onClickClassicHandler.html" target="_blank">onClickClassicHandler</a></li>
+    <li><a href="https://xowlty.github.io/week13/onClickHandler.html" target="_blank">onClickHandler</a></li>
    </ol>
   </li>
  </ul><hr/>
