--- a/portfolio/lje.html
+++ b/portfolio/lje.html
@@ -24,7 +24,7 @@
 <ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lje5.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">ect.</a></li></ul></nav>
 <section class="col-6 col-m-9">
  <h4>학력</h4><hr/><p>
- 이름: 이정은 <br/>나이: 21살 <br/> 현재: 대전대학교 2학년 재학중
+ 이름: 이정은 <br/>나이: 2X살 <br/> 현재: 대X대학교 2학년 재학중
  </p>
 </section>
 <aside class="col-3 col-m-12 banner">
