--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <li><a href="https://xowlty.github.io/week13/getElementById.html" target="_blank">getElementById</a></li>
     <li><a href="https://xowlty.github.io/week13/getElementsByName.html" target="_blank">getElementsByName</a></li>
     <li><a href="https://xowlty.github.io/week13/getElementsByTagName.html" target="_blank">getElementsByTagName</a></li>
-    <li><a href="https://xowlty.github.io/week13/getSetModeValue.html" target="_blank">getSetModeValue</a></li>
+    <li><a href="https://xowlty.github.io/week13/getSetNodeValue.html" target="_blank">getSetNodeValue</a></li>
     <li><a href="https://xowlty.github.io/week13/getSetInnerHTML.html" target="_blank">getSetInnerHTML</a></li>
     <li><a href="https://xowlty.github.io/week13/getSetAttribute.html" target="_blank">getSetAttribute</a></li>
     <li><a href="https://xowlty.github.io/week13/onClickClassicHandler.html" target="_blank">onClickClassicHandler</a></li>
