--- a/week13/getSetNodeValue.html
+++ b/week13/getSetNodeValue.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- getSetNodeValue.html -->
+<!doctype html> <!-- getSetNodeValuer.html -->
 <html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <link rel="stylesheet" href="sample.css"/><script src="sample.js"></script>
@@ -8,6 +8,8 @@
    var nodeTextContent=accessTag.textContent;
    console.log(accessTag.tagName);
    console.log(nodeTextContent);
+   accessTag.textContent="노드값 읽기 쓰기";
+   console.log(accessTag.textContent);
 }
 </script><title>웹 프로그래밍 실습</title></head>
 <body>
