--- a/week13/getSetNodeValue.html
+++ b/week13/getSetNodeValue.html
@@ -21,6 +21,6 @@
    <input id="button_id1" type="button" name="user_id" value="입력"/><br/>
   빈칸에 검색어를 넣고 입력해 주세요.
 </form>
-<form><input type="button" onclick="fnGetSetNodeValuerr();" value="변경실행"\></form>
+<form><input type="button" onclick="fnGetSetNodeValue();" value="변경실행"\></form>
 </section>
 </body></html>
