Update and rename onclickHandle.html to onClickHandler.html

--- a/week13/onClickHandler.html
+++ b/week13/onClickHandler.html
@@ -1,4 +1,4 @@
-<!DOCTYPEhtml> <!-- onclickHandle.html-->
+<!DOCTYPEhtml> <!-- onClickHandler.html-->
 <html><head><meta charset="urf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/> 
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
