--- a/portfolio/lje2.html
+++ b/portfolio/lje2.html
@@ -3,6 +3,7 @@
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
 <link rel="stylesheet" href="rwd4.css"/>
 <style>
+td{width:300px; height:80px;}
 *{ box-sizing:border-box; padding:0; margin:0; }
 .row::after { content:""; clear:both; display: table; }
 [class*="col-"]{ float:left; padding:10px;}
@@ -58,31 +59,31 @@
   <th></th><th>월</th><th>화</th><th>수</th><th>목</th><th>금</th>
  </tr>
  <tr>
-  <td>9:00</td><td> </td><td></td><td rowspan = "2", class = "subject1">자료구조및실습 <br> 24403</td><td></td><td></td>
+  <th>9:00</th><td> </td><td></td><td rowspan = "2", class = "subject1">자료구조및실습 <br> 24403</td><td></td><td></td>
  </tr>
  <tr>
-  <td>10:00</td><td></td><td></td><td rowspan = "2", class = "subject2">인터넷프로그래밍<br>24403</td><td class = "subject3">디지털논리회로<br>24401</td>
+  <th>10:00</th><td></td><td></td><td rowspan = "2", class = "subject2">인터넷프로그래밍<br>24403</td><td class = "subject3">디지털논리회로<br>24401</td>
  </tr>
  <tr>
-  <td>11:00</td><td></td><td rowspan = "2", class = "subject1">자료구조및실습<br>24403</td><td rowspan = "2", class = "subject3">디지털논리회로<br>24401</td><td></td>
+  <th>11:00</th><td></td><td rowspan = "2", class = "subject1">자료구조및실습<br>24403</td><td rowspan = "2", class = "subject3">디지털논리회로<br>24401</td><td></td>
  </tr>
   <tr>
-  <td>12:00</td><td></td><td class = "subject4">TOEIC<br>인문사회관6B121</td><td rowspan ="3", class = "subject5">인문학,사회과학과통계<br>6422</td>
+  <th>12:00</th><td></td><td class = "subject4">TOEIC<br>인문사회관6B121</td><td rowspan ="3", class = "subject5">인문학,사회과학과통계<br>6422</td>
  </tr>
   <tr>
-  <td>13:00</td><td></td><td class = "subject4">TOEIC<br>인문사회관6B121</td><td rowspan = "2", class = "subject6">문명의발달과토목<br>22417</td><td></td>
+  <th>13:00</th><td></td><td class = "subject4">TOEIC<br>인문사회관6B121</td><td rowspan = "2", class = "subject6">문명의발달과토목<br>22417</td><td></td>
  </tr>
   <tr>
-  <td>14:00</td><td rowspan = "4", class = "subject7">c++프로그래밍<br>24414</td><td></td><td></td>
+  <th>14:00</th><td rowspan = "4", class = "subject7">c++프로그래밍<br>24414</td><td></td><td></td>
  </tr>
   <tr>
-  <td>15:00</td><td></td><td></td><td></td><td rowspan = "2", class = "subject8">영어회화2<br>15750</td>
+  <th>15:00</th><td></td><td></td><td></td><td rowspan = "2", class = "subject8">영어회화2<br>15750</td>
  </tr>
  <tr>
-  <td>16:00</td><td></td><td rowspan = "2", class = "subject2">인터넷프로그래밍<br>24403</td><td></td>
+  <th>16:00</th><td></td><td rowspan = "2", class = "subject2">인터넷프로그래밍<br>24403</td><td></td>
  </tr>
     <tr>
-  <td>17:00</td><td></td><td></td><td></td>
+  <th>17:00</th><td></td><td></td><td></td>
  </tr>
  </table></section>
 <aside class="col-3 col-m-12 banner">
