--- a/portfolio/lje4.html
+++ b/portfolio/lje4.html
@@ -22,7 +22,7 @@ ol.e{list-style-type:decimal-leading-zero;}
   <body><header class="header"><a href="portfolio.html"><h2>20XX 이정은 포트폴리오</h2></a></header><div class="row"></div>
 <div id="main">
 <nav class="col-3 col-m-3 menu">
-<ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lje5.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">ect.</a></li></ul></nav>
+<ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lje5.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">etc.</a></li></ul></nav>
 <section class="col-6 col-m-9">
  <h4>공모전 알림</h4><hr/><br/><p><img src="KakaoTalk_20190528_002929543.png"><img src="KakaoTalk_20190528_002931284.png"><img src="KakaoTalk_20190528_002930599.png"></p>
 </section>
