--- a/portfolio/lje4.html
+++ b/portfolio/lje4.html
@@ -24,11 +24,11 @@ ol.e{list-style-type:decimal-leading-zero;}
 <nav class="col-3 col-m-3 menu">
 <ul><li><a href="lje.html">학력</a></li><li><a href="lje1.html">경력</a></li><li><a href="lje2.html">수업 수강 내역</a></li><li><a href="lje3.html">과목별 프로젝트 설명</a></li><li><a href="lje4.html">공모전</a></li><li><a href="lje5.html">동아리</a></li><li><a href="lje6.html">봉사활동</a></li><li><a href="lje7.html">etc.</a></li></ul></nav>
 <section class="col-6 col-m-9">
- <h4>공모전 알림</h4><hr/><br/><p><img src="KakaoTalk_20190528_002929543.png"><img src="KakaoTalk_20190528_002931284.png"><img src="KakaoTalk_20190528_002930599.png"></p>
+ <h4>공모전 알림</h4><hr/><br/><p><img src="bdbac5e4b8aeb0f8b8f0c0fc.png"><img src="file51527975203345987253f3a6ad1a5c945a4ba5f827a58f5f334.png"></p>
 </section>
 <aside class="col-3 col-m-12">
 <br/>
-<ol class="e"><li>창업경진대회</li><li>스토리공모전</li><li>논문공모전</li></ol></aside>
+<ol class="e"><li>스토리공모전</li><li>논문공모전</li></ol></aside>
  </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
