--- a/portfolio/lje4.html
+++ b/portfolio/lje4.html
@@ -3,6 +3,9 @@
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
 <link rel="stylesheet" href="rwd4.css"/>
 <style>
+ A:link {COLOR:black; TEXT-DECORATION:none}
+A:visited{COLOR:blue; TEXT-DECORATION:none}
+A:hover{COLOR:orange; TEXT-DECORATION:none}
 ol.e{list-style-type:decimal-leading-zero;}
 *{ box-sizing:border-box; padding:0; margin:0; }
 .row::after { content:""; clear:both; display: table; }
