--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -6,7 +6,7 @@
  <title>자바 예제</title></head>
 <body>
  <h1 id="aList">이정은</h1>
- <ul style="list-style-type:circle">
+ <ul style="list-style-type:rec">
   <li id="week01">1주차
    <ol>
     <li><a href="https://xowlty.github.io/Java/week01/eclipse.html" target="_blank">eclipse</a></li>
