--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -3,15 +3,24 @@
 <head>
  <meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
- <title>자바 예제</title></head>
-<body>
- <h1 id="aList">이정은</h1>
+ <style>
+  a:link {color:blue; text-decoration:none;} a:visited {color:purple; text-decoration:none;} a:hover{text-decoration:underline;} a:acive{color:red; text-decoration:none;}
+ </style>
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <title>자바 예제</title></head>
+ <body><header></header>
+ <h1 id="aList">이정은</h1><hr/>
  <ul style="list-style-type:square">
   <li id="week01">1주차
    <ol>
     <li><a href="https://xowlty.github.io/Java/week01/eclipse.html" target="_blank">eclipse</a></li>
    </ol>
   </li>
- </ul><hr/>
+  <li id="week01">2주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week01/20190915.html" target="_blank">변학도숙제</a></li>
+   </ol>
+  </li>
+ </ul>
 </body>
 </html>
