--- a/Java/week03/Ex1_8.html
+++ b/Java/week03/Ex1_8.html
@@ -8,5 +8,5 @@
  <h4>이정은</h4><p>소스코드</p>
   <img class="size" src="8.png"alt="소스코드"/>
  <p>결과화면</p>
-  <img class="size" src="8.png"alt="결과화면"/>
+  <img class="size" src="8_1.png"alt="결과화면"/>
 </section></body></html>
