--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -21,6 +21,19 @@
     <li><a href="https://xowlty.github.io/Java/week02/20190915.html" target="_blank">변학도숙제</a></li>
    </ol>
   </li>
+  <li id="week03">3주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_1.html" target="_blank">Ex1_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_2.html" target="_blank">Ex1_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_3.html" target="_blank">Ex1_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_4.html" target="_blank">Ex1_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_5.html" target="_blank">Ex1_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_6.html" target="_blank">Ex1_6</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_7.html" target="_blank">Ex1_7</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_8.html" target="_blank">Ex1_8</a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_9.html" target="_blank"></a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
