--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -31,7 +31,7 @@
     <li><a href="https://xowlty.github.io/Java/week03/Ex1_6.html" target="_blank">Ex1_6</a></li>
     <li><a href="https://xowlty.github.io/Java/week03/Ex1_7.html" target="_blank">Ex1_7</a></li>
     <li><a href="https://xowlty.github.io/Java/week03/Ex1_8.html" target="_blank">Ex1_8</a></li>
-    <li><a href="https://xowlty.github.io/Java/week03/Ex1_9.html" target="_blank"></a></li>
+    <li><a href="https://xowlty.github.io/Java/week03/Ex1_9.html" target="_blank">숙제</a></li>
    </ol>
   </li>
  </ul>
