--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -34,6 +34,19 @@
     <li><a href="https://xowlty.github.io/Java/week03/Ex1_9.html" target="_blank">숙제</a></li>
    </ol>
   </li>
+   <li id="week04">4주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_1.html" target="_blank">Ex2_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_2.html" target="_blank">Ex2_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_3.html" target="_blank">Ex2_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_4.html" target="_blank">Ex2_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_5.html" target="_blank">Ex2_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_6.html" target="_blank">Ex2_6</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_7.html" target="_blank">Ex2_7</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_8.html" target="_blank">Ex2_8</a></li>
+    <li><a href="https://xowlty.github.io/Java/week04/Ex2_9.html" target="_blank">숙제</a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
