--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -47,6 +47,18 @@
     <li><a href="https://xowlty.github.io/Java/week04/Ex2_9.html" target="_blank">숙제</a></li>
    </ol>
   </li>
+  <li id="week05">5주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_1.html" target="_blank">Ex3_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_2.html" target="_blank">Ex3_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_3.html" target="_blank">Ex3_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_4.html" target="_blank">Ex3_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_5.html" target="_blank">Ex3_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_6.html" target="_blank">Ex3_6</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_7.html" target="_blank">Ex3_7</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_8.html" target="_blank"></a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
