--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -56,7 +56,13 @@
     <li><a href="https://xowlty.github.io/Java/week05/Ex3_5.html" target="_blank">Ex3_5</a></li>
     <li><a href="https://xowlty.github.io/Java/week05/Ex3_6.html" target="_blank">Ex3_6</a></li>
     <li><a href="https://xowlty.github.io/Java/week05/Ex3_7.html" target="_blank">Ex3_7</a></li>
-    <li><a href="https://xowlty.github.io/Java/week05/Ex3_8.html" target="_blank"></a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex3_8.html" target="_blank">숙제</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex4_1.html" target="_blank">Ex4_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex4_2.html" target="_blank">Ex4_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex4_3.html" target="_blank">Ex4_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex4_4.html" target="_blank">Ex4_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex4_5.html" target="_blank">Ex4_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week05/Ex4_6.html" target="_blank">숙제</a></li>
    </ol>
   </li>
  </ul>
