--- a/Java/week04/Ex2_9.html
+++ b/Java/week04/Ex2_9.html
@@ -3,7 +3,7 @@
  <style> 
  .size[width:97%;]
 </style>
-<title>실습2</title></head>
+<title>숙제1</title></head>
 <body><header></header><section>
  <h4>이정은</h4><p>소스코드</p>
   <img class="size" src="9_4.png"alt="소스코드"/><br/>
