--- a/Java/week05/Ex3_8.html
+++ b/Java/week05/Ex3_8.html
@@ -7,7 +7,7 @@
 <body><header></header><section>
  <h4>이정은</h4><p>소스코드</p>
   <img class="size" src="8.png"alt="소스코드"/><br/>
-  <img class="size" src="8_1.png"alt="소스코드"/>
+  <img class="size" src="8_1.png"alt="소스코드"/><br/>
  <p>결과화면</p>
-  <img class="size" src="8.png"alt="결과화면"/>
+  <img class="size" src="8_2.png"alt="결과화면"/>
 </section></body></html>
