--- a/Java/week05/Ex4_6.html
+++ b/Java/week05/Ex4_6.html
@@ -3,12 +3,12 @@
  <style> 
  .size[width:97%;]
 </style>
-<title>실습4</title></head>
+<title>숙제3</title></head>
 <body><header></header><section>
  <h4>이정은</h4><p>소스코드</p>
   <img class="size" src="16.png"alt="소스코드"/><br/>
   <img class="size" src="16_1.png"alt="소스코드"/><br/>
  <p>결과화면</p>
-  <img class="size" src="16.png"alt="소스코드"/><br/>
-  <img class="size" src="16_1.png"alt="소스코드"/><br/>
+  <img class="size" src="16_2.png"alt="소스코드"/><br/>
+  <img class="size" src="16_3.png"alt="소스코드"/><br/>
   </section></body></html>
