--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -65,6 +65,32 @@
     <li><a href="https://xowlty.github.io/Java/week05/Ex4_6.html" target="_blank">숙제</a></li>
    </ol>
   </li>
+   <li id="week06">6주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex5_1.html" target="_blank">Ex5_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex5_2.html" target="_blank">Ex5_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex5_3.html" target="_blank">Ex5_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex5_4.html" target="_blank">Ex5_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex5_5.html" target="_blank">숙제</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_1.html" target="_blank">Ex6_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_2.html" target="_blank">Ex6_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_3.html" target="_blank">Ex6_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_4.html" target="_blank">Ex6_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_5.html" target="_blank">Ex6_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_6.html" target="_blank">Ex6_6</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_7.html" target="_blank">Ex6_7</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_8.html" target="_blank">Ex6_8</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_9.html" target="_blank">Ex6_9</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_10.html" target="_blank">Ex6_10</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_11.html" target="_blank">Ex6_11</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_12.html" target="_blank">Ex6_12</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_13.html" target="_blank">Ex6_13</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_14.html" target="_blank">Ex6_14</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_15.html" target="_blank">Ex6_15</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_16.html" target="_blank">Ex6_16</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_17.html" target="_blank">숙제</a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
