--- a/Java/week06/Ex6_17.html
+++ b/Java/week06/Ex6_17.html
@@ -3,7 +3,7 @@
  <style> 
  .size[width:97%;]
 </style>
-<title>실습6</title></head>
+<title>숙제6</title></head>
 <body><header></header><section>
  <h4>이정은</h4><p>소스코드</p>
   <img class="size" src="17.png"alt="소스코드"/>
