--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -76,6 +76,10 @@
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_2.html" target="_blank">Ex6_2</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_3.html" target="_blank">Ex6_3</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_4.html" target="_blank">Ex6_4</a></li>
+    </ol>
+  </li>
+   <li id="week07">7주차
+   <ol>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_5.html" target="_blank">Ex6_5</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_6.html" target="_blank">Ex6_6</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_7.html" target="_blank">Ex6_7</a></li>
