--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -93,6 +93,15 @@
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_15.html" target="_blank">Ex6_15</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_16.html" target="_blank">Ex6_16</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_17.html" target="_blank">숙제</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_0.html" target="_blank">Ex7_0</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_1.html" target="_blank">Ex7_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_2.html" target="_blank">Ex7_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_11.html" target="_blank">Ex7_11</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_12.html" target="_blank">Ex7_12</a></li>
+
+
+    
+
    </ol>
   </li>
  </ul>
