--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -80,8 +80,6 @@
   </li>
    <li id="week07">7주차
    <ol>
-    <li><a href="https://xowlty.github.io/Java/week06/Ex6_5.html" target="_blank">Ex6_5</a></li>
-    <li><a href="https://xowlty.github.io/Java/week06/Ex6_6.html" target="_blank">Ex6_6</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_7.html" target="_blank">Ex6_7</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_8.html" target="_blank">Ex6_8</a></li>
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_9.html" target="_blank">Ex6_9</a></li>
@@ -100,9 +98,12 @@
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_16.html" target="_blank">Ex6_16</a></li>
     <li><a href="https://xowlty.github.io/Java/week07/Ex7_3.html" target="_blank">Ex7_3</a></li>
     <li><a href="https://xowlty.github.io/Java/week07/Ex7_4.html" target="_blank">Ex7_4</a></li>
-
-    
-
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_5.html" target="_blank">Ex6_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week06/Ex6_6.html" target="_blank">Ex6_6</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_5.html" target="_blank">Ex7_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_6.html" target="_blank">Ex7_6</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_10.html" target="_blank">숙제</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Ex7_9.html" target="_blank">Ex7_9</a></li>
    </ol>
   </li>
  </ul>
