--- a/Java/week05/Ex4_6.html
+++ b/Java/week05/Ex4_6.html
@@ -11,4 +11,6 @@
  <p>결과화면</p>
   <img class="size" src="16_2.png"alt="소스코드"/><br/>
   <img class="size" src="16_3.png"alt="소스코드"/><br/>
+  <img class="size" src="16_4.png"alt="소스코드"/><br/>
+
   </section></body></html>
