--- a/Java/week04/Ex2_5.html
+++ b/Java/week04/Ex2_5.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--Ex2_5.html-->
 <html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
  <style> 
- .size[width:97%;]
+  .size{width:97%;}
 </style>
 <title>실습2</title></head>
 <body><header></header><section>
