--- a/Java/week05/Ex3_8.html
+++ b/Java/week05/Ex3_8.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--Ex3_8.html-->
 <html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
  <style> 
- .size[width:97%;]
+  .size{width:97%;}
 </style>
 <title>숙제3</title></head>
 <body><header></header><section>
