--- a/Java/week07/Ex7_10.html
+++ b/Java/week07/Ex7_10.html
@@ -4,10 +4,14 @@
  <style> 
   .size{width:97%;}
 </style>
-<title>실습7</title></head>
+<title>숙제7</title></head>
 <body>
  <h3><p>이정은</p><p>소스코드</p></h3>
   <img class="size" src="7.png" border=0>
+  <img class="size" src="7_1.png" border=0>
+  <img class="size" src="7_2.png" border=0>
+  <img class="size" src="7_3.png" border=0>
+
  <h3><p>결과화면</p></h3>
-  <img class="size" src="7.png"border=0>
+  <img class="size" src="7_4.png"border=0>
 </body></html>
