--- a/Java/week10/Ex7_9.html
+++ b/Java/week10/Ex7_9.html
@@ -7,6 +7,8 @@
 <body><header></header><section>
  <h4>이정은</h4><p>소스코드</p>
   <img class="size" src="1.png"alt="소스코드"/>
+  <img class="size" src="1_1.png"alt="소스코드"/>
+
  <p>결과화면</p>
   <img class="size" src="2.png"alt="결과화면"/>
 </section></body></html>
