--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -106,6 +106,11 @@
     <li><a href="https://xowlty.github.io/Java/week07/Ex7_9.html" target="_blank">Ex7_9</a></li>
    </ol>
   </li>
+   <li id="week10">10주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex7_9.html" target="_blank">Ex7_9</a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
