--- a/Java/week07/Ex7_0.html
+++ b/Java/week07/Ex7_0.html
@@ -2,7 +2,7 @@
 <html><head><meta charset="utf-8"/>
  <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <style> 
- .size[width:97%;]
+  .size{width:97%;}
 </style>
 <title>실습7</title></head>
 <body>
