--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -108,6 +108,17 @@
    <li id="week10">10주차
    <ol>
     <li><a href="https://xowlty.github.io/Java/week10/Ex7_9.html" target="_blank">Ex7_9</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_9.html" target="_blank">Ex8_9</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_10.html" target="_blank">Ex8_10</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_11.html" target="_blank">Ex8_11</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_12.html" target="_blank">Ex8_12</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_13.html" target="_blank">Ex8_13</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_14.html" target="_blank">Ex8_14</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_15.html" target="_blank">Ex8_15</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_16.html" target="_blank">Ex8_16</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_17.html" target="_blank">Ex8_17</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_19.html" target="_blank">Ex8_19</a></li>
+    <li><a href="https://xowlty.github.io/Java/week10/Ex8_22.html" target="_blank">Ex8_22</a></li>
    </ol>
   </li>
  </ul>
