--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -112,6 +112,10 @@
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_10.html" target="_blank">Ex8_10</a></li>
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_11.html" target="_blank">Ex8_11</a></li>
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_12.html" target="_blank">Ex8_12</a></li>
+   </ol>
+  </li>
+   <li id="week11">11주차
+   <ol>
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_13.html" target="_blank">Ex8_13</a></li>
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_14.html" target="_blank">Ex8_14</a></li>
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_15.html" target="_blank">Ex8_15</a></li>
