--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -102,7 +102,10 @@
     <li><a href="https://xowlty.github.io/Java/week06/Ex6_6.html" target="_blank">Ex6_6</a></li>
     <li><a href="https://xowlty.github.io/Java/week07/Ex7_5.html" target="_blank">Ex7_5</a></li>
     <li><a href="https://xowlty.github.io/Java/week07/Ex7_6.html" target="_blank">Ex7_6</a></li>
-    <li><a href="https://xowlty.github.io/Java/week07/Ex7_10.html" target="_blank">숙제</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Hw7-1.html" target="_blank">곱하기</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Hw7-2.html" target="_blank">3각형 면적구하기</a></li>
+    <li><a href="https://xowlty.github.io/Java/week07/Hw7-3.html" target="_blank">4각형 면적구하기</a></li>
+
    </ol>
   </li>
    <li id="week10">10주차
