--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -126,6 +126,15 @@
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_17.html" target="_blank">Ex8_17</a></li>
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_19.html" target="_blank">Ex8_19</a></li>
     <li><a href="https://xowlty.github.io/Java/week10/Ex8_22.html" target="_blank">Ex8_22</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex9_1.html" target="_blank">Ex9_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex9_2.html" target="_blank">Ex9_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex9_3.html" target="_blank">Ex9_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex9_4.html" target="_blank">Ex9_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex10_1.html" target="_blank">Ex10_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex10_2.html" target="_blank">Ex10_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex10_3.html" target="_blank">Ex10_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex10_4.html" target="_blank">Ex10_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week11/Ex10_5.html" target="_blank">Ex10_5</a></li>
    </ol>
   </li>
  </ul>
