--- a/Java/week13/BookStore.html
+++ b/Java/week13/BookStore.html
@@ -22,5 +22,5 @@
   <img class="size" src="student.png"alt="소스코드"/>
   
   <h3><p>my store 결과화면</p></h3>
-  <img class="size" src="result"alt="결과화면"/>
+  <img class="size" src="result.png"alt="결과화면"/>
 </section></body></html>
