--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -162,6 +162,12 @@
     <li><a href="https://xowlty.github.io/Java/week13/BookStore.html" target="_blank">BookStore</a></li>
    </ol>
   </li>
+  <li id="week13">14주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week14/Ex13_1.html" target="_blank">Ex13_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week14/Ex13_2.html" target="_blank">Ex13_2</a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
