--- a/portfolio/V2.html
+++ b/portfolio/V2.html
@@ -28,9 +28,8 @@ A:hover{COLOR:orange; TEXT-DECORATION:none}
 <section class="col-6 col-m-9">
 <h4>아르바이트 경력</h4><hr/> <ul><li>마트 1년</li><br/>
 <h4>인턴십 경력</h4><hr/> <li>(주)시큐웍스 2개월</li></ul>
-</section>
-<aside class="col-3 col-m-12 banner">
-<ul><li><img src="인턴.png"></li></ul></aside>
-</div><div class="row"></div>
+<ul><li><img src="인턴.png"></li></ul>
+</section></div>
+<div class="row"></div>
 <footer class="footer"><h4>Copyright2021 Korea.</h4></footer>
 </body></html> 
