--- a/portfolio/2021_portfolio.html
+++ b/portfolio/2021_portfolio.html
@@ -28,8 +28,8 @@ A:hover{COLOR:orange; TEXT-DECORATION:none}
 <ul><li><a href="V1.html">학력</a></li><li><a href="V2.html">경력</a></li><li><a href="V3.html">전공 수강 내역</a></li><li><a href="V4.html">과목별 프로젝트 설명</a></li><li><a href="V5.html">etc.</a></li></ul></nav>
 <section class="col-6 col-m-9">
 <picture>
-<source media="(min-width:768px)"srcset="moon-1859616_1920.png">
-<source media="(min-width:600px)"srcset="moon-1859616_1920-big.png">
+<source media="(min-width:768px)"srcset="증명.png">
+<source media="(min-width:600px)"srcset="증명.png">
 <img src="증명.png" alt="증명사진" style="width:auto;">
 </picture>
 </section>
