--- a/portfolio/V1.html
+++ b/portfolio/V1.html
@@ -27,7 +27,7 @@ A:hover{COLOR:orange; TEXT-DECORATION:none}
 <ul><li><a href="V1.html">학력</a></li><li><a href="V2.html">경력</a></li><li><a href="V3.html">전공 수강 내역</a></li><li><a href="V4.html">과목별 프로젝트 설명</a></li><li><a href="V5.html">etc.</a></li></ul></nav>
 <section class="col-6 col-m-9">
  <h4>학력</h4><hr/><p>
- <img src="2200551-200.png">
+ <img src="증명.png">
  이름: 이정은 <br/>나이: 23살 <br/> 현재: 대전대학교 4학년 재학중
  </p>
 </section>
