--- a/portfolio/V1.html
+++ b/portfolio/V1.html
@@ -28,7 +28,7 @@ A:hover{COLOR:orange; TEXT-DECORATION:none}
 <section class="col-6 col-m-9">
  <h4>학력</h4><hr/><p>
  <img src="증명.png">
- 이름: 이정은 <br/>나이: 23살 <br/> 현재: 대전대학교 4학년 재학중
+<br/> 이름: 이정은 <br/>나이: 23살 <br/> 현재: 대전대학교 4학년 재학중
  </p>
 </section>
 <aside class="col-3 col-m-12 banner">
