--- a/portfolio/V1.html
+++ b/portfolio/V1.html
@@ -21,7 +21,7 @@ A:hover{COLOR:orange; TEXT-DECORATION:none}
 @media only screen and (min-width: 768px){.col-3{width:25%;} .col-6{width:50%;}}
 </style>
 <title>2021 이정은 포트폴리오</title></head>
-  <body><header class="header"><a href="portfolio.html"><h2>20XX 이정은 포트폴리오</h2></a></header><div class="row"></div>
+  <body><header class="header"><a href="2021_portfolio.html"><h2>20XX 이정은 포트폴리오</h2></a></header><div class="row"></div>
 <div id="main">
 <nav class="col-3 col-m-3 menu">
 <ul><li><a href="V1.html">학력</a></li><li><a href="V2.html">경력</a></li><li><a href="V3.html">전공 수강 내역</a></li><li><a href="V4.html">과목별 프로젝트 설명</a></li><li><a href="V5.html">etc.</a></li></ul></nav>
