--- a/portfolio/2021_portfolio.html
+++ b/portfolio/2021_portfolio.html
@@ -1,6 +1,7 @@
 <!doctype html> <!-- 2021_portfolio.html --> 
  <html><head><meta charset="utf-8"/> 
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
+  <link rel="stylesheet" href="rwd4.css"/>
 <style>
  A:link {COLOR:black; TEXT-DECORATION:none}
 A:visited{COLOR:black; TEXT-DECORATION:none}
